# mecanum-4-wheel-ros2

./: README.md  rrrr
iron_x/: CMakeLists.txt  package.xml
iron_x/config/: ekf.yaml
iron_x/launch/: gazebo.launch.py  map.launch.py  robot.launch.py  urdf.launch.py  world.launch.py
iron_x/meshes/: Realsense_link.STL  imu_link.STL
iron_x/params/: mppi.yaml  nav2_params.yaml  stvl.yaml  test.yaml
iron_x/rviz/: nav2.rviz  rgbd.rviz
iron_x/scripts/: matrix.py
iron_x/urdf/: gazebo.urdf  iron_x.urdf  pro.urdf
iron_x/worlds/: cafe.world  empty.world  house.world  obj.world  room.world
ironx_pro/: package.xml
ironx_pro/config/: ironx_lds_2d.lua
ironx_pro/launch/: 2d_map.launch.py  2d_nav.launch.py  3d_nav.launch.py  3d_waypoint.launch.py  rtab_map.launch.py
ironx_pro/params/: 2d_waypoint.yaml  3d_waypoint.yaml
ironx_pro/rviz/: 3d.rviz  ironx_cartographer.rviz
ironx_pro/scripts/: imu_encoder.py  move_linear.py  nav2_pose.py  nav2_waypoint.py  rad_deg.py  robot_navigator.py  save_pose.py
joy_stick/: CMakeLists.txt
joy_stick/config/: joystick.yaml
mecanum model v.4/: CMakeLists.txt  package.xml
mecanum model v.4/config/: joint_names_mecanum model v.4.yaml
mecanum model v.4/launch/: display.launch  gazebo.launch
mecanum test v.6/: CMakeLists.txt  package.xml
mecanum test v.6/meshes/: imu_link.STL  (+1 more)
models/: Read Me  setup model  setup_model.md
nav2/: CMakeLists.txt  package.xml
point_cloud_perception/: CMakeLists.txt  package.xml
point_cloud_perception/launch/: 3d_depth_mapping_rtab.launch.py
point_cloud_perception/point_cloud_map/: rtab_map.launch.py
point_cloud_perception/point_clound_map/: voxelized.pcd
point_cloud_perception/src/: clustering.cpp  planner_seg.cpp  voxelizing.cpp
real/: readME.md
simulation/: readME.md
(+113 files in other folders)
